--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "eslint"
   },
-  "dependencies": {
+  "dependencies": { "@supabase/supabase-js": "^2.45.4",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
