--- a/package.json
+++ b/package.json
@@ -63,14 +63,15 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.3",
-    "postcss": "^8.5.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.4.5"
+  "@types/node": "^20",
+  "@types/react": "18.3.12",
+  "@types/react-dom": "18.3.1",
+  "autoprefixer": "^10.4.20",
+  "eslint": "^9",
+  "eslint-config-next": "16.1.3",
+  "postcss": "^8.5.0",
+  "tailwindcss": "^3.4.17",
+  "typescript": "^5.4.5"
+}
   }
 }
