--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-
     "@supabase/supabase-js": "^2.45.4",
     "@vercel/analytics": "1.3.1",
-
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -63,15 +61,18 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
-  "@types/node": "^20",
-  "@types/react": "18.3.12",
-  "@types/react-dom": "18.3.1",
-  "autoprefixer": "^10.4.20",
-  "eslint": "^9",
-  "eslint-config-next": "16.1.3",
-  "postcss": "^8.5.0",
-  "tailwindcss": "^3.4.17",
-  "typescript": "^5.4.5"
-}
+    "@types/node": "^20",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.3",
+    "postcss": "^8.5.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.4.5"
+  },
+  "overrides": {
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1"
   }
 }
