--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.0",
+"@supabase/auth-helpers-nextjs": "^0.9.0",
     "next": "16.1.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
