--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9",
+    "eslint": "^8.0.0",  // Adjusted eslint version
     "eslint-config-next": "13.4.1",
+    "eslint-plugin-react": "^7.28.0", 
     "postcss": "^8.5.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.4.5"
