--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "your-app-name",
-  "version": "1.0.0",
+  "name": "nextjs",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/auth-helpers-react": "^0.2.0",
-    "@supabase/supabase-js": "^2.45.4",
-    "next": "^13.4.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-hook-form": "^7.60.0",
+    "@supabase/auth-helpers-nextjs": "^0.9.0",
+    "next": "16.1.3",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -42,7 +42,11 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+
+    "@supabase/supabase-js": "^2.45.4",
     "@vercel/analytics": "1.3.1",
+
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
@@ -51,6 +55,7 @@
     "lucide-react": "^0.454.0",
     "next-themes": "^0.4.6",
     "react-day-picker": "9.8.0",
+    "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
     "sonner": "^1.7.4",
@@ -60,14 +65,12 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.0.0",
-    "eslint-config-next": "13.4.1",
-    "eslint-plugin-react": "^7.28.0",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.3",
     "postcss": "^8.5.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.4.5"
